sumo/tests/dfrouter/errors/options_parsing/false_space/errors.dfrouter
Error: The parameter 'of' is not allowed in this context.
 Switch or parameter name expected.
Error: The parameter 'net.net.xml' is not allowed in this context.
 Switch or parameter name expected.
Error: Could not parse commandline options.
Quitting (on error).
